added buttons for selection that highlight a certain color on hover and click

--- a/research/research.html
+++ b/research/research.html
@@ -32,27 +32,43 @@
             <a class="waves-effect waves-light btn-large" id="mmy-button">Make/Model/Year</a>
         </div>
         <div class="horizontal-section">
-            <h3>Select a Type of Car </h3>
-            <div class="container" id="research-container">
-              <div class="row">
-                <div class="col s3"><img class="responsive-img" src="../img/car-types/Alternatives.png"/></div>
-                <div class="col s3"><img class="responsive-img" src="../img/car-types/Compacts.png"/></div>
-                <div class="col s3"><img class="responsive-img" src="../img/car-types/Convertibles.png"/></div>
-                <div class="col s3"><img class="responsive-img" src="../img/car-types/Coupes.png"/></div>
-                <div class="col s3"><img class="responsive-img" src="../img/car-types/Luxury.png"/></div>
-                <div class="col s3"><img class="responsive-img" src="../img/car-types/Sedans.png"/></div>
-                <div class="col s3"><img class="responsive-img" src="../img/car-types/Sport.png"/></div>
-                <div class="col s3"><img class="responsive-img" src="../img/car-types/SUVs.png"/></div>
-                <div class="col s3"><img class="responsive-img" src="../img/car-types/Trucks.png"/></div>
-                <div class="col s3"><img class="responsive-img" src="../img/car-types/Vans.png"/></div>
-                <div class="col s3"><img class="responsive-img" src="../img/car-types/Wagons.png"/></div>
-
-              </div>
+          <h3>Select a Type of Car </h3>
+          <div class="container" id="research-container">
+            <div class="row">
+              <div class="col s3"><img class="responsive-img" src="../img/car-types/Alternatives.png"/></div>
+              <div class="col s3"><img class="responsive-img" src="../img/car-types/Compacts.png"/></div>
+              <div class="col s3"><img class="responsive-img" src="../img/car-types/Convertibles.png"/></div>
+              <div class="col s3"><img class="responsive-img" src="../img/car-types/Coupes.png"/></div>
+              <div class="col s3"><img class="responsive-img" src="../img/car-types/Luxury.png"/></div>
+              <div class="col s3"><img class="responsive-img" src="../img/car-types/Sedans.png"/></div>
+              <div class="col s3"><img class="responsive-img" src="../img/car-types/Sport.png"/></div>
+              <div class="col s3"><img class="responsive-img" src="../img/car-types/SUVs.png"/></div>
+              <div class="col s3"><img class="responsive-img" src="../img/car-types/Trucks.png"/></div>
+              <div class="col s3"><img class="responsive-img" src="../img/car-types/Vans.png"/></div>
+              <div class="col s3"><img class="responsive-img" src="../img/car-types/Wagons.png"/></div>
             </div>
-            <a class="waves-effect waves-light btn back-button">Back</a>
-            <a class="waves-effect waves-light btn next-button">Next</a>          
+          </div>
+          <a class="waves-effect waves-light btn back-button">Back</a>
+          <a class="waves-effect waves-light btn next-button">Next</a>          
         </div>
-        <div class="horizontal-section">Third Horizontal Div</div>
+        <div class="horizontal-section">
+          <h3>What's important to you</h3>
+          <div class="container" id="research-container">
+            <div class="row">
+              <div class="col s4"><a class="waves-effect waves-light btn research-categories">Gas Mileage</a></div>
+              <div class="col s4"><a class="waves-effect waves-light btn research-categories">Heated Seats</a></div>
+              <div class="col s4"><a class="waves-effect waves-light btn research-categories">Acceleration</a></div>
+              <div class="col s4"><a class="waves-effect waves-light btn research-categories">Handling</a></div>
+              <div class="col s4"><a class="waves-effect waves-light btn research-categories">Comfort</a></div>
+              <div class="col s4"><a class="waves-effect waves-light btn research-categories">High Tech</a></div>
+              <div class="col s4"><a class="waves-effect waves-light btn research-categories">Leather Seats</a></div>
+              <div class="col s4"><a class="waves-effect waves-light btn research-categories">Sound System</a></div>
+              <div class="col s4"><a class="waves-effect waves-light btn research-categories">Don't Care</a></div>
+            </div>
+          </div>
+          <a class="waves-effect waves-light btn back-button">Back</a>
+          <a class="waves-effect waves-light btn next-button">Next</a>          
+        </div>
         <div class="horizontal-section">Fourth Horizontal Div</div>
 
         <!-- Vertical Section -->
