--- a/research/research.html
+++ b/research/research.html
@@ -221,18 +221,23 @@
             <script>
             var slider = document.getElementById('test5');
             noUiSlider.create(slider, {
-             start: [20, 80],
+             start: [1989, 2017],
              connect: true,
              step: 1,
              range: {
-               'min': 0,
-               'max': 100
+               'min': 1989,
+               'max': 2017
              },
              format: wNumb({
                decimals: 0
              })
-            });
+           });
             </script>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col">
+              <button style="margin-right:50px;float:right;" class="back_button">Go Back</button>
             </div>
           </div>
         </span>
