removed old carrouseel slider js, and fixed missing divs for right hnaded div to display in research page

--- a/research/research.html
+++ b/research/research.html
@@ -27,7 +27,7 @@
       <div id="gallery">
       <!-- Horiztonal Section -->
         <div class="horizontal-section">
-          <h3>How would you like to find your car?</h3> 
+          <h3>How would you like to find your car?</h3>
             <a class="waves-effect waves-light btn-large" id="personalized-button">Personalized Search</a>
             <br>
             <a class="waves-effect waves-light btn-large" id="mmy-button">Make/Model/Year</a>
@@ -50,7 +50,7 @@
             </div>
           </div>
           <a class="waves-effect waves-light btn back-button">Back</a>
-          <a class="waves-effect waves-light btn next-button">Next</a>          
+          <a class="waves-effect waves-light btn next-button">Next</a>
         </div>
         <div class="horizontal-section">
           <h3>What's important to you</h3>
@@ -68,7 +68,7 @@
             </div>
           </div>
           <a class="waves-effect waves-light btn back-button">Back</a>
-          <a class="waves-effect waves-light btn next-button">Next</a>          
+          <a class="waves-effect waves-light btn next-button">Next</a>
         </div>
         <div class="horizontal-section">Fourth Horizontal Div</div>
 
@@ -165,7 +165,6 @@
             </div>
           </div>
         </div>
-        <!-- END Select MAKE -->
         <!-- 2. Select MODEL -->
         <div class="vertical-section">
           <div class="row">
@@ -251,11 +250,8 @@
               <a class="waves-effect waves-light btn down-button">Next</a>
             </div>
           </div>
-
         </div>
-        <!-- END Select MODEL -->
         <!-- 3. Select YEAR -->
-        <script type="text/javascript" src="../js/nouislider.js"></script>
         <div class="vertical-section">
           <div class="row">
             <div class="col m12" style="text-align:center">
@@ -265,21 +261,6 @@
           <div class="row">
             <div class="col m8 offset-m2" style="text-align:center">
               <div id="test5"></div>
-              <script>
-              var slider = document.getElementById('test5');
-              noUiSlider.create(slider, {
-               start: [1989, 2017],
-               connect: true,
-               step: 1,
-               range: {
-                 'min': 1989,
-                 'max': 2017
-               },
-               format: wNumb({
-                 decimals: 0
-               })
-             });
-              </script>
             </div>
           </div>
           <div class="row" style="margin-top:125px">
@@ -288,11 +269,13 @@
               <a class="waves-effect waves-light btn down-button">Next</a>
             </div>
           </div>
-        <!-- END Select YEAR -->
+        </div>
+      </div>
 
       <div id="t2">
       </div>
     </div>
+
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="../js/materialize.min.js"></script>
