changed slider js to be in .js file, and added basic slider in research.

--- a/research/research.html
+++ b/research/research.html
@@ -281,6 +281,7 @@
     <script type="text/javascript" src="../js/materialize.min.js"></script>
     <script type="text/javascript" src="../js/custom.js"></script>
     <script type="text/javascript" src="../js/slider.js"></script>
+    <script type="text/javascript" src="../js/nouislider.js"></script>
 
   </body>
 </html>
