added testing image for car-panel and an object of sedans

--- a/research/research.html
+++ b/research/research.html
@@ -272,7 +272,20 @@
         </div>
       </div>
 
-      <div id="t2">
+      <div id="car-panel">
+        <div class="row car-panel-info">
+          <div class="col s4">Image</div>
+          <div class="col s4">make</div>
+          <div class="col s2">flag</div>
+          <div class="col s2">MPG</div>
+        </div>
+
+        <div class="row car-row valign-wrapper">
+          <div class="col s4"><img class="responsive-img" src="../img/car-panel/bmw-3.png"/></div>
+          <div class="col s4">BMW 328i</div>
+          <div class="col s2">A</div>
+          <div class="col s2">B</div>
+        </div>
       </div>
     </div>
 
