added some optional homepage backgrounds, and fixed navbar/button position to be responsive

--- a/index.html
+++ b/index.html
@@ -26,21 +26,21 @@
     <div class="slider fullscreen" id="homepage-slider">
       <ul class="slides">
         <li>
-          <img src="img/car-bg-1.jpg">
+          <img src="img/car-bg-3.jpg">
           <div class="caption center-align">
             <h3>Welcome to Edmunds</h3>
             <h5 class="light grey-text text-lighten-3">Your trusted neighborhood car specialist.</h5>
           </div>
         </li>
         <li>
-          <img src="img/car-bg-2.jpg">
+          <img src="img/home-bg-2.jpg">
           <div class="caption left-align">
             <h3>Research a car</h3>
             <h5 class="light grey-text text-lighten-3">If you're not sure what you want, help us help you.</h5>
           </div>
         </li>
         <li>
-          <img src="img/car-bg-3.jpg">
+          <img src="img/car-bg-4.jpg">
           <div class="caption right-align">
             <h3>Purchase a car.</h3>
             <h5 class="light grey-text text-lighten-3">Know what you want already? We'll find you the best prices.</h5>
@@ -51,5 +51,6 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
     <script type="text/javascript" src="js/custom.js"></script>
+
   </body>
 </html>
