--- a/research/research.html
+++ b/research/research.html
@@ -280,7 +280,7 @@
           <div class="col s2">MPG</div>
         </div>
 
-        <div class="row car-row">
+        <div class="row car-row valign-wrapper">
           <div class="col s4"><img class="responsive-img" src="../img/car-panel/bmw-3.png"/></div>
           <div class="col s4">BMW 328i</div>
           <div class="col s2">A</div>
