small commit for the shell of filtering and adding cars to car panel, functions not fully implemented yet"

--- a/research/research.html
+++ b/research/research.html
@@ -273,19 +273,30 @@
       </div>
 
       <div id="car-panel">
-        <div class="row car-panel-info">
-          <div class="col s4">Image</div>
-          <div class="col s4">make</div>
-          <div class="col s2">flag</div>
-          <div class="col s2">MPG</div>
+        <div class="row valign-wrapper" id="car-panel-info">
+          <div class="col s3">&nbsp;</div>
+          <div class="col s3 center-align">Make &#8681;</div>
+          <div class="col s2 center-align">Safety</div>
+          <div class="col s2 center-align">Comfort</div>
+          <div class="col s2 center-align">MPG</div>
         </div>
 
         <div class="row car-row valign-wrapper">
-          <div class="col s4"><img class="responsive-img" src="../img/car-panel/bmw-3.png"/></div>
-          <div class="col s4">BMW 328i</div>
-          <div class="col s2">A</div>
-          <div class="col s2">B</div>
+          <div class="col s3"><img class="responsive-img" src="../img/car-panel/bmw-3.png"/></div>
+          <div class="col s3">BMW 328i</div>
+          <div class="col s2 center-align">A</div>
+          <div class="col s2 center align">B</div>
+          <div class="col s2 center align">B</div>
         </div>
+
+        <div class="row car-row valign-wrapper">
+          <div class="col s3"><img class="responsive-img" src="../img/car-panel/bmw-5.png"/></div>
+          <div class="col s3">BMW 528i</div>
+          <div class="col s2 center-align">A</div>
+          <div class="col s2 center align">A</div>
+          <div class="col s2 center align">A</div>
+        </div>
+
       </div>
     </div>
 
