added a hover effect to the rows in car-panel, as well as adjusted their margin to 0

--- a/research/research.html
+++ b/research/research.html
@@ -281,6 +281,22 @@
           <div class="col s2 center-align">MPG</div>
         </div>
 
+        <div class="row car-row valign-wrapper ">
+          <div class="col s3"><img class="responsive-img" src="../img/car-panel/bmw-3.png"/></div>
+          <div class="col s3">BMW 328i</div>
+          <div class="col s2 center-align">A</div>
+          <div class="col s2 center align">B</div>
+          <div class="col s2 center align">B</div>
+        </div>
+
+        <div class="row car-row valign-wrapper">
+          <div class="col s3"><img class="responsive-img" src="../img/car-panel/bmw-5.png"/></div>
+          <div class="col s3">BMW 528i</div>
+          <div class="col s2 center-align">A</div>
+          <div class="col s2 center align">A</div>
+          <div class="col s2 center align">A</div>
+        </div>
+
         <div class="row car-row valign-wrapper">
           <div class="col s3"><img class="responsive-img" src="../img/car-panel/bmw-3.png"/></div>
           <div class="col s3">BMW 328i</div>
@@ -296,6 +312,92 @@
           <div class="col s2 center align">A</div>
           <div class="col s2 center align">A</div>
         </div>
+                <div class="row car-row valign-wrapper">
+          <div class="col s3"><img class="responsive-img" src="../img/car-panel/bmw-3.png"/></div>
+          <div class="col s3">BMW 328i</div>
+          <div class="col s2 center-align">A</div>
+          <div class="col s2 center align">B</div>
+          <div class="col s2 center align">B</div>
+        </div>
+
+        <div class="row car-row valign-wrapper">
+          <div class="col s3"><img class="responsive-img" src="../img/car-panel/bmw-5.png"/></div>
+          <div class="col s3">BMW 528i</div>
+          <div class="col s2 center-align">A</div>
+          <div class="col s2 center align">A</div>
+          <div class="col s2 center align">A</div>
+        </div>        <div class="row car-row valign-wrapper">
+          <div class="col s3"><img class="responsive-img" src="../img/car-panel/bmw-3.png"/></div>
+          <div class="col s3">BMW 328i</div>
+          <div class="col s2 center-align">A</div>
+          <div class="col s2 center align">B</div>
+          <div class="col s2 center align">B</div>
+        </div>
+
+        <div class="row car-row valign-wrapper">
+          <div class="col s3"><img class="responsive-img" src="../img/car-panel/bmw-5.png"/></div>
+          <div class="col s3">BMW 528i</div>
+          <div class="col s2 center-align">A</div>
+          <div class="col s2 center align">A</div>
+          <div class="col s2 center align">A</div>
+        </div>        <div class="row car-row valign-wrapper">
+          <div class="col s3"><img class="responsive-img" src="../img/car-panel/bmw-3.png"/></div>
+          <div class="col s3">BMW 328i</div>
+          <div class="col s2 center-align">A</div>
+          <div class="col s2 center align">B</div>
+          <div class="col s2 center align">B</div>
+        </div>
+
+        <div class="row car-row valign-wrapper">
+          <div class="col s3"><img class="responsive-img" src="../img/car-panel/bmw-5.png"/></div>
+          <div class="col s3">BMW 528i</div>
+          <div class="col s2 center-align">A</div>
+          <div class="col s2 center align">A</div>
+          <div class="col s2 center align">A</div>
+        </div>        <div class="row car-row valign-wrapper">
+          <div class="col s3"><img class="responsive-img" src="../img/car-panel/bmw-3.png"/></div>
+          <div class="col s3">BMW 328i</div>
+          <div class="col s2 center-align">A</div>
+          <div class="col s2 center align">B</div>
+          <div class="col s2 center align">B</div>
+        </div>
+
+        <div class="row car-row valign-wrapper">
+          <div class="col s3"><img class="responsive-img" src="../img/car-panel/bmw-5.png"/></div>
+          <div class="col s3">BMW 528i</div>
+          <div class="col s2 center-align">A</div>
+          <div class="col s2 center align">A</div>
+          <div class="col s2 center align">A</div>
+        </div>        <div class="row car-row valign-wrapper">
+          <div class="col s3"><img class="responsive-img" src="../img/car-panel/bmw-3.png"/></div>
+          <div class="col s3">BMW 328i</div>
+          <div class="col s2 center-align">A</div>
+          <div class="col s2 center align">B</div>
+          <div class="col s2 center align">B</div>
+        </div>
+
+        <div class="row car-row valign-wrapper">
+          <div class="col s3"><img class="responsive-img" src="../img/car-panel/bmw-5.png"/></div>
+          <div class="col s3">BMW 528i</div>
+          <div class="col s2 center-align">A</div>
+          <div class="col s2 center align">A</div>
+          <div class="col s2 center align">A</div>
+        </div>        <div class="row car-row valign-wrapper">
+          <div class="col s3"><img class="responsive-img" src="../img/car-panel/bmw-3.png"/></div>
+          <div class="col s3">BMW 328i</div>
+          <div class="col s2 center-align">A</div>
+          <div class="col s2 center align">B</div>
+          <div class="col s2 center align">B</div>
+        </div>
+
+        <div class="row car-row valign-wrapper">
+          <div class="col s3"><img class="responsive-img" src="../img/car-panel/bmw-5.png"/></div>
+          <div class="col s3">BMW 528i</div>
+          <div class="col s2 center-align">A</div>
+          <div class="col s2 center align">A</div>
+          <div class="col s2 center align">A</div>
+        </div>
+
 
       </div>
     </div>
