added append button that displays all sedans in list when clicked

--- a/research/research.html
+++ b/research/research.html
@@ -41,7 +41,7 @@
               <div class="col s3"><img class="responsive-img" src="../img/car-types/Convertibles.png"/></div>
               <div class="col s3"><img class="responsive-img" src="../img/car-types/Coupes.png"/></div>
               <div class="col s3"><img class="responsive-img" src="../img/car-types/Luxury.png"/></div>
-              <div class="col s3"><img class="responsive-img" src="../img/car-types/Sedans.png"/></div>
+              <div class="col s3"><img class="responsive-img" src="../img/car-types/Sedans.png" id="sedan-button"/></div>
               <div class="col s3"><img class="responsive-img" src="../img/car-types/Sport.png"/></div>
               <div class="col s3"><img class="responsive-img" src="../img/car-types/SUVs.png"/></div>
               <div class="col s3"><img class="responsive-img" src="../img/car-types/Trucks.png"/></div>
@@ -280,7 +280,6 @@
           <div class="col s2 center-align">Comfort</div>
           <div class="col s2 center-align">MPG</div>
         </div>
-
 
 
       </div>
