moved files to dynamic slider js file for modularization, got the panel working that takes in a list of column names, and automatically figures out their width with dynamic responsiveness

--- a/research/research.html
+++ b/research/research.html
@@ -273,14 +273,7 @@
       </div>
 
       <div id="car-panel">
-        <div class="row valign-wrapper" id="car-panel-info">
-          <div class="col s3">&nbsp;</div>
-          <div class="col s3 center-align">Make &#8681;</div>
-          <div class="col s2 center-align">Safety</div>
-          <div class="col s2 center-align">Comfort</div>
-          <div class="col s2 center-align">MPG</div>
-        </div>
-
+        <div id="car-panel-info-text">A list of cars will be displayed in this panel</div>
 
       </div>
     </div>
@@ -291,6 +284,7 @@
     <script type="text/javascript" src="../js/custom.js"></script>
     <script type="text/javascript" src="../js/slider.js"></script>
     <script type="text/javascript" src="../js/nouislider.js"></script>
+    <script type="text/javascript" src="../js/dynamic-slider-filter.js"></script>
 
   </body>
 </html>
