fixed panels showing up correctly, now the landing page for car type shows overall top cars in order

--- a/research/research.html
+++ b/research/research.html
@@ -56,11 +56,11 @@
           <h3>What's important to you</h3>
           <div class="container" id="research-container">
             <div class="row">
-              <div class="col s4"><a class="waves-effect waves-light btn research-categories">Gas Mileage</a></div>
-              <div class="col s4"><a class="waves-effect waves-light btn research-categories">Heated Seats</a></div>
+              <div class="col s4"><a class="waves-effect waves-light btn research-categories" id="gas-mileage">Gas Mileage</a></div>
+              <div class="col s4"><a class="waves-effect waves-light btn research-categories" id="safety">Safety</a></div>
               <div class="col s4"><a class="waves-effect waves-light btn research-categories">Acceleration</a></div>
               <div class="col s4"><a class="waves-effect waves-light btn research-categories">Handling</a></div>
-              <div class="col s4"><a class="waves-effect waves-light btn research-categories">Comfort</a></div>
+              <div class="col s4"><a class="waves-effect waves-light btn research-categories" id="comfort">Comfort</a></div>
               <div class="col s4"><a class="waves-effect waves-light btn research-categories">High Tech</a></div>
               <div class="col s4"><a class="waves-effect waves-light btn research-categories">Leather Seats</a></div>
               <div class="col s4"><a class="waves-effect waves-light btn research-categories">Sound System</a></div>
