added placeholder text and image to the research landing page

--- a/research/research.html
+++ b/research/research.html
@@ -273,7 +273,12 @@
       </div>
 
       <div id="car-panel">
-        <div id="car-panel-info-text">A list of cars will be displayed in this panel</div>
+        <div id="car-panel-info-text">
+          <h5 id="panel-text-placeholder">A list of cars will be displayed in this panel, personalized to your search
+          with ratings, filtering options, and their closest competition!</h5>
+          <img class="responsive-img" src="../img/car-panel/car-panel-image-placeholder.png" 
+            id="panel-image-placeholder"/>
+        </div>
 
       </div>
     </div>
