--- a/research/research.html
+++ b/research/research.html
@@ -43,7 +43,7 @@
               <div class="col s3"><img class="responsive-img" src="../img/car-types/Luxury.png"/></div>
               <div class="col s3"><img class="responsive-img" src="../img/car-types/Sedans.png" id="sedan-button"/></div>
               <div class="col s3"><img class="responsive-img" src="../img/car-types/Sport.png"/></div>
-              <div class="col s3"><img class="responsive-img" src="../img/car-types/SUVs.png"/></div>
+              <div class="col s3"><img class="responsive-img" src="../img/car-types/SUVs.png" id="suv-button"/></div>
               <div class="col s3"><img class="responsive-img" src="../img/car-types/Trucks.png"/></div>
               <div class="col s3"><img class="responsive-img" src="../img/car-types/Vans.png"/></div>
               <div class="col s3"><img class="responsive-img" src="../img/car-types/Wagons.png"/></div>
