--- a/research/research.html
+++ b/research/research.html
@@ -283,7 +283,7 @@
         <table>
             <thead id="car-panel-info">
               <tr>
-                  <th data-field="id" id="fixed-panel-width"></th>
+                  <th data-field="id" id="fixed-panel-width"><img id="expand-button" src="../img/car-panel/expand-button.png"/></th>
                   <th data-field="name" id="fixed-panel-width">Model</th>
                   <th data-field="price" id="fixed-panel-width">Most Viewed</th>
                   <th data-field="price">Avg. Price</th>
@@ -324,7 +324,7 @@
                 <td></td>
                 <td>A</td>
                 <td>A</td>
-              </tr>              
+              </tr>
             </tbody>
           </table>
 
@@ -332,7 +332,7 @@
     </div>
 
 
-    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script   src="https://code.jquery.com/jquery-3.1.0.js"   integrity="sha256-slogkvB1K3VOkzAI8QITxV3VzpOnkeNVsKvtkYLMjfk="   crossorigin="anonymous"></script>
     <script type="text/javascript" src="../js/materialize.min.js"></script>
     <script type="text/javascript" src="../js/custom.js"></script>
     <script type="text/javascript" src="../js/slider.js"></script>
