--- a/research/research.html
+++ b/research/research.html
@@ -274,34 +274,15 @@
 
       <div id="car-panel">
         <div id="car-panel-info-text">
-<!--           <h5 id="panel-text-placeholder">A list of cars will be displayed in this panel, personalized to your search
+          <h5 id="panel-text-placeholder">A list of cars will be displayed in this panel, personalized to your search
           with ratings, filtering options, and their closest competition!</h5>
           <img class="responsive-img" src="../img/car-panel/car-panel-image-placeholder.png" 
-            id="panel-image-placeholder"/> -->
+            id="panel-image-placeholder"/>
         </div>
 
         <table>
             <thead id="car-panel-info">
-              <tr>
-                  <th data-field="id" id="fixed-panel-width"><img id="expand-button" src="../img/car-panel/expand-button.png"/></th>
-                  <th data-field="name" id="fixed-panel-width">Model</th>
-                  <th data-field="price" id="fixed-panel-width">Most Viewed</th>
-                  <th data-field="price">Avg. Price</th>
-                  <th data-field="price">Comfort</th>
-                  <th data-field="price">MPG</th>
-                  <th data-field="price">Safety</th>
-                  <th data-field="price">Acceleration</th>
-                  <th data-field="price">Headroom</th>
-                  <th data-field="price">Item Price</th>
-                  <th data-field="price">Item Price</th>
-                  <th data-field="price">Item Price</th>
-                  <th data-field="price">Item Price</th>
-                  <th data-field="price">Item Price</th>
-                  <th data-field="price">Item Price</th>
-                  <th data-field="price">Item Price</th>
-                  <th data-field="price">Item Price</th>
-                  <th data-field="price">Item Price</th>
-              </tr>
+
             </thead>
 
             <tbody>
