pushing fully functional sedan car adder with expanding list

--- a/research/research.html
+++ b/research/research.html
@@ -279,36 +279,12 @@
           <img class="responsive-img" src="../img/car-panel/car-panel-image-placeholder.png" 
             id="panel-image-placeholder"/>
         </div>
-
         <table>
             <thead id="car-panel-info">
-
             </thead>
-
-            <tbody>
-              <tr>
-                <td><img class="responsive-img" src="../img/car-panel/bmw-3.png"></td>
-                <td>BMW 328i</td>
-                <td>#1</td>
-                <td>$54,000</td>
-                <td>A</td>
-                <td>A</td>
-                <td>A</td>
-                <td>A</td>
-              </tr>
-              <tr>
-                <td><img class="responsive-img" src="../img/car-panel/bmw-5.png"></td>
-                <td>BMW 528i</td>
-                <td>#1</td>
-                <td>$64,000</td>
-                <td>A</td>
-                <td></td>
-                <td>A</td>
-                <td>A</td>
-              </tr>
+            <tbody id="car-panel-list">
             </tbody>
           </table>
-
       </div>
     </div>
 
