--- a/research/research.html
+++ b/research/research.html
@@ -54,6 +54,7 @@
         </div>
         <div class="horizontal-section">
           <h3>What's important to you</h3>
+          <p>Pick the 3 things that matter most, and we'll suggest you some cars</p>
           <div class="container" id="research-container">
             <div class="row">
               <div class="col s4"><a class="waves-effect waves-light btn research-categories" id="gas-mileage">Gas Mileage</a></div>
@@ -70,7 +71,10 @@
           <a class="waves-effect waves-light btn back-button">Back</a>
           <a class="waves-effect waves-light btn next-button">Next</a>
         </div>
-        <div class="horizontal-section">Fourth Horizontal Div</div>
+        <div class="horizontal-section">Fourth Horizontal Div
+
+
+        </div>
 
         <!-- Vertical Section -->
         <!-- 1. Select MAKE -->
