--- a/research/research.html
+++ b/research/research.html
@@ -40,10 +40,14 @@
               <div class="col s3"><img class="responsive-img" src="../img/car-types/Compacts.png"/></div>
               <div class="col s3"><img class="responsive-img" src="../img/car-types/Convertibles.png"/></div>
               <div class="col s3"><img class="responsive-img" src="../img/car-types/Coupes.png"/></div>
+            </div>
+            <div class="row">              
               <div class="col s3"><img class="responsive-img" src="../img/car-types/Luxury.png"/></div>
               <div class="col s3"><img class="responsive-img" src="../img/car-types/Sedans.png" id="sedan-button"/></div>
               <div class="col s3"><img class="responsive-img" src="../img/car-types/Sport.png"/></div>
               <div class="col s3"><img class="responsive-img" src="../img/car-types/SUVs.png" id="suv-button"/></div>
+            </div>
+            <div class="row">
               <div class="col s3"><img class="responsive-img" src="../img/car-types/Trucks.png"/></div>
               <div class="col s3"><img class="responsive-img" src="../img/car-types/Vans.png"/></div>
               <div class="col s3"><img class="responsive-img" src="../img/car-types/Wagons.png"/></div>
