--- a/research/research.html
+++ b/research/research.html
@@ -6,6 +6,7 @@
     <link type="text/css" rel="stylesheet" href="../css/custom.css"  media="screen,projection"/>
     <link type="text/css" rel="stylesheet" href="../css/steve.css"  media="screen,projection"/>
     <link type="text/css" rel="stylesheet" href="../css/nouislider.css"  media="screen,projection"/>
+    <link href="https://cdn.jsdelivr.net/jquery.roundslider/1.3/roundslider.min.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   </head>
 
@@ -75,7 +76,14 @@
           <a class="waves-effect waves-light btn back-button">Back</a>
           <a class="waves-effect waves-light btn next-button">Next</a>
         </div>
-        <div class="horizontal-section">Fourth Horizontal Div
+        <div class="horizontal-section">
+          <h3>Choose your Price</h3>
+          <p>Financing, leasing, or purchasing? We got you covered</p>
+
+
+          <div id="slider" class="rslider"></div>
+          <div id="slider2" class="rslider"></div>
+          <div id="slider3" class="rslider"></div>
 
 
         </div>
@@ -303,6 +311,8 @@
     <script type="text/javascript" src="../js/slider.js"></script>
     <script type="text/javascript" src="../js/nouislider.js"></script>
     <script type="text/javascript" src="../js/dynamic-slider-filter.js"></script>
+    <script src="https://cdn.jsdelivr.net/jquery.roundslider/1.3/roundslider.min.js"></script>
+
 
   </body>
 </html>
