changed colors for sliders to be more like edmunds colors

--- a/research/research.html
+++ b/research/research.html
@@ -81,9 +81,11 @@
           <p>Financing, leasing, or purchasing? We got you covered</p>
 
 
-          <div id="slider" class="rslider"></div>
-          <div id="slider2" class="rslider"></div>
-          <div id="slider3" class="rslider"></div>
+          <div id="payment-sliders">
+            <div id="slider" class="rslider"></div>
+            <div id="slider2" class="rslider"></div>
+            <div id="slider3" class="rslider"></div>
+          </div>
 
 
         </div>
