changed the add vehicle function to the new card panel laout

--- a/research/research.html
+++ b/research/research.html
@@ -291,18 +291,57 @@
       </div>
 
       <div id="car-panel">
-        <div id="car-panel-info-text">
+<!--         <div id="car-panel-info-text">
           <h5 id="panel-text-placeholder">A list of cars will be displayed in this panel, personalized to your search
           with ratings, filtering options, and their closest competition!</h5>
           <img class="responsive-img" src="../img/car-panel/car-panel-image-placeholder.png" 
             id="panel-image-placeholder"/>
+        </div> -->
+
+
+        <div id="car-panel-info">
+          <span id="car-panel-info-text">Your top matches</span>
         </div>
-        <table>
-            <thead id="car-panel-info">
-            </thead>
-            <tbody id="car-panel-list">
-            </tbody>
-          </table>
+
+<!-- car panel CARD -->
+        <div class="car-panel-card">
+<!-- left panel -->
+          <div class="car-panel-left">
+            <img class="car-thumbnail" src="../img/car-panel/bmw-3.png"/>
+            <div class="match-suffix">match</div>
+            <div class="match-percent"> 73% </div>
+          </div>
+<!-- middle pannel -->
+          <div class="car-panel-middle">
+            <div class="car-make">
+              Buick Lacrosse
+            </div>
+            <div class="car-price">$52,450</div>            
+            <div class="car-info">
+              <div class="panel-selection">
+                mileage: <span class="panel-inject-1">45</span>
+              </div>
+              <div class="panel-selection">
+                safety: <span class="panel-inject-2">A</span>
+              </div>
+              <div class="panel-selection">
+                comfort: <span class="panel-inject-3">A-</span>
+              </div>
+            </div>                  
+          </div>
+<!-- right pannel -->
+          <div class="car-panel-right">
+            <p class="edmunds-rating-suffix">Edmund's Rating:</p>
+            <p class="edmunds-rating"> B </p>            
+            <div class="blurb-suffix"> Our take:
+              <div class="blurb"> 
+                This car drives like it looks, Amazing. The interior has a brand new (...)
+              </div>
+            </div>
+          </div> 
+        </div>
+<!-- END car panel card -->     
+
       </div>
     </div>
 
